# slab

./: .gitignore
HW1/: CMakeLists.txt  a.out  driver.cpp  driver_Ideal_Cache  driver_Ideal_Cache.cpp  driver_LFU_Cache.cpp  init.sh  main  main.cpp  makefile  program.out  testDriver  testDriver.cpp  valgrind-out.txt
HW1/inc/: LFU.h  priorQueue.h
HW1/src/: LFU.inl  priorQueue.inl  testDriver
HW1/testSys/: doTest.py  generateTests.py
HW1/testSys/idealCache/: iCache  iCache.cpp  idealCache.h  idealCache.inl
HW1/testSys/unittests/: unittest.cpp
HW1/tests/: doTest.py  generateTests.py  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test3.txt  test30.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
HW2/: .clang-format  .clang-tidy  CMakeLists.txt  TriangleIntersaction.cpp  makefile
HW2/cmake/: clang-format.cmake  clang-tidy.cmake
HW2/inc/: Triangle Intersaction.h  line3d.h  line3d.hpp  mathlib.h  octTree.h  plane.h  triangle3d.h  triangle3d.hpp  vector3d.h  vector3d.hpp
HW2/src/: line3d.cpp  line3d.inl  mathlib.cpp  octTree.cpp  plane.cpp  srcs.cmake  triangle3d.cpp  triangle3d.inl  vector3d.cpp  vector3d.inl
HW2/tests/: octTreeFunctionalTest  octTreeFunctionalTest.cpp  planeIntersectionTEST.h  testMain.cpp  triangleIntersectionTEST.h  tst_srcs.cmake
